# arch-audit-gtk

./: .gitmodules  Cargo.toml  README.md
artwork/: README.md
contrib/: arch-audit-gtk.hook
src/: gui.rs  main.rs  notify.rs  updater.rs
