[package]
name = "arch-audit-gtk"
version = "0.3.1"
description = "Arch Linux Security Update Notifications"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/arch-audit-gtk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
arch-audit = "0.2"
dirs-next = "2.0.0"
env_logger = "0.11"
glib = "0.14"
gtk = "0.16"
humantime = "2.1.0"
inotify = "0.10"
libappindicator = "0.8"
log = "0.4.14"
opener = "0.7"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
toml = "0.8"

[patch.crates-io]
# arch-audit must use alpm.rs v4.0 for building against libalpm v15.x (from
# pacman 7.0.0). Upstream hasn't bumped yet, so for now we use a local patch.
arch-audit = { path = "third_party/arch-audit" }
